landing page done

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <input type="search" name="" class="nav-search" placeholder="Search news, topics and more">
         </div>
         <div class="nav-btns">
-            <li>Breaking</li>
-            <li>Weather</li>
+            <li>Breaking News</li>
+            <li>Categories</li>
             <li>Account</li>
         </div>
         <div class="right-nav-icons">
@@ -31,12 +31,30 @@
     </nav>
 
     <div id="offcanvas">
-        <div class="mobile-btns">
-            <li>Breaking</li>
-            <li>Weather</li>
-            <li>Account</li>
+        <div id="offcanvas-content">
+            <div id="offcanvas-upper">
+                <div id="offcanvas-header">
+                    <h3>News Sync</h3>
+                    <span>voice of world</span>
+                    <hr>
+                </div>
+                <div class="mobile-btns">
+                    <li>Breaking News</li>
+                    <hr>
+                    <li style="display: flex; gap:10px;">Categories <i class="fa-solid fa-sort-down"></i></li>
+                    <hr>
+                    <li>Log In</li>
+                </div>
+            </div>
+
+            <div id="offcanvas-down">
+                <div id="icons"></div>
+                <div id="logout">Log Out <i class="fa-solid fa-power-off"></i></div>
+            </div>
         </div>
     </div>
+
+
     <div id="searchbox-mobile"> <input type="search" name="" class="nav-search"
             placeholder="Search news, topics and more">
     </div>
@@ -61,30 +79,90 @@
             style="color: #ff0000;"></i>
     </h2>
 
-
-    <section id="breaking-sec">
-        <div class="see-also">
-            <h5>See Also</h5>
-            <ul>
-                <li><i class="fa-solid fa-arrow-right"></i> Greenland's opposition wins election dominated by
-                    independence and Trump</li>
-                <li><i class="fa-solid fa-arrow-right"></i> What's in the Ukraine ceasefire plan US is presenting to
-                    Russia?</li>
-                <li><i class="fa-solid fa-arrow-right"></i> Judge to consider Trump's effort to deport Palestinian
-                    activist</li>
-                <li><i class="fa-solid fa-arrow-right"></i> UK helped Ukraine and US reach ceasefire deal - government
-                    sources</li>
-                <li>More</li>
-            </ul>
+    <hr style="color:#ff0000;">
+    <section class="card-deck">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
         </div>
-        <div id="cssportal-grid">
-            <div id="div1"><img class="grid-img" src="img/wallpaperflare.com_wallpaper (1).jpg" alt=""></div>
-            <div id="div2"><img class="grid-img" src="img/wallpaperflare.com_wallpaper (3).jpg" alt=""></div>
-            <div id="div3"><img class="grid-img" src="img/wallpaperflare.com_wallpaper (2).jpg" alt=""></div>
-            <div id="div4"><img class="grid-img" src="img/wallpaperflare.com_wallpaper (5).jpg" alt=""></div>
-            <div id="div5"><img class="grid-img" src="img/wallpaperflare.com_wallpaper (5).jpg" alt=""></div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
         </div>
     </section>
+    <hr style="color:#ff0000;">
 
     <h2 class="section-header">LATEST NEWS <i class="fa-solid fa-chart-line fa-fade" style="color: #145fe1;"></i>
     </h2>
