--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="index.html" class="logo">News Sync</a>
         <div class="searchbox">
             <input type="search" name="" class="nav-search" placeholder="Search news, topics and more">
+            <button id="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"
+                    style="color: #ffffff;"></i></button>
         </div>
         <div class="nav-btns">
             <li>Breaking News</li>
@@ -49,6 +51,7 @@
 
             <div id="offcanvas-down">
                 <div id="icons"></div>
+                <hr>
                 <div id="logout">Log Out <i class="fa-solid fa-power-off"></i></div>
             </div>
         </div>
@@ -57,6 +60,8 @@
 
     <div id="searchbox-mobile"> <input type="search" name="" class="nav-search"
             placeholder="Search news, topics and more">
+        <button id="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"
+                style="color: #ffffff;"></i></button>
     </div>
 
 
