--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Sync</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,15 +23,33 @@
                     style="color: #ffffff;"></i></button>
         </div>
         <div class="nav-btns">
-            <li>Breaking News</li>
-            <li>Categories</li>
-            <li>Account</li>
+            <a>Breaking News <i class="fa-solid fa-circle fa-beat-fade fa-xs" style="color: #ff0000;"></i></a>
+            <a href="login.html">Log In <i class="fa-solid fa-arrow-right-to-bracket fa-xs"
+                    style="color: #ffffff;"></i></a>
         </div>
         <div class="right-nav-icons">
             <div class="search-icon"><i class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></div>
             <div class="collapse-bar"><i class="fa-solid fa-bars fa-xl" style="color: #ffffff;"></i></div>
         </div>
     </nav>
+    <div class="categories">
+        <ul>
+            <li><a href="index.html" class="category-active">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Sport</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">Innovation</a></li>
+            <li><a href="#">Culture</a></li>
+            <li><a href="#">Arts</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Earth</a></li>
+            <li><a href="#">Audio</a></li>
+            <li><a href="#">Video</a></li>
+            <li><a href="#">Live</a></li>
+        </ul>
+    </div>
+    <div id="scroll-progress"></div>
+
 
     <div id="offcanvas">
         <div id="offcanvas-content">
@@ -41,11 +60,31 @@
                     <hr>
                 </div>
                 <div class="mobile-btns">
-                    <li>Breaking News</li>
+                    <a>Breaking News</a>
                     <hr>
-                    <li style="display: flex; gap:10px;">Categories <i class="fa-solid fa-sort-down"></i></li>
+                    <a style="display: flex; gap:10px; align-items: center;" id="category-dropdown">Categories <i
+                            class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-angle-right" style="display: none;"></i></a>
+
+                    <div class="categories-mobile">
+                        <hr>
+                        <ul>
+                            <li><a href="index.html" class="category-active">Home</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Sport</a></li>
+                            <li><a href="#">Business</a></li>
+                            <li><a href="#">Innovation</a></li>
+                            <li><a href="#">Culture</a></li>
+                            <li><a href="#">Arts</a></li>
+                            <li><a href="#">Travel</a></li>
+                            <li><a href="#">Earth</a></li>
+                            <li><a href="#">Audio</a></li>
+                            <li><a href="#">Video</a></li>
+                            <li><a href="#">Live</a></li>
+                        </ul>
+                    </div>
                     <hr>
-                    <li>Log In</li>
+                    <a>Log In</a>
                 </div>
             </div>
 
@@ -80,12 +119,12 @@
         </div>
     </section>
 
-    <h2 class="section-header">BREAKING NEWS <i class="fa-solid fa-circle fa-beat-fade fa-xs"
+    <h2 class="section-header fade-in">BREAKING NEWS <i class="fa-solid fa-circle fa-beat-fade fa-xs"
             style="color: #ff0000;"></i>
     </h2>
 
     <hr style="color:#ff0000;">
-    <section class="card-deck">
+    <section class="card-deck fade-in">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -169,17 +208,18 @@
     </section>
     <hr style="color:#ff0000;">
 
-    <h2 class="section-header">LATEST NEWS <i class="fa-solid fa-chart-line fa-fade" style="color: #145fe1;"></i>
+    <h2 class="section-header fade-in">LATEST NEWS <i class="fa-solid fa-chart-line fa-fade"
+            style="color: #145fe1;"></i>
     </h2>
 
-    <section class="cards">
+    <section class="cards fade-in">
         <div class="card" style="width: 18rem;">
             <img src="img/wallpaperflare.com_wallpaper (1).jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -188,7 +228,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -197,7 +237,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -206,7 +246,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -215,7 +255,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -224,7 +264,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -242,7 +282,7 @@
                 <h5 class="card-title">What does the US education department do - and can Trump dismantle it?</h5>
                 <p class="card-text">Cutbacks have been announced at the department, which the US president has pledged
                     to eliminate altogether.</p>
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
     </section>
@@ -251,12 +291,13 @@
 
     </h4>
 
-    <section class="cards">
+    <section class="cards fade-in">
         <div class="card" style="width: 18rem;">
             <img src="img/wallpaperflare.com_wallpaper (6).jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -265,6 +306,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -273,6 +315,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -281,6 +324,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -289,6 +333,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -297,6 +342,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -305,6 +351,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
 
@@ -313,6 +360,7 @@
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+                <a href="news_detail.html" class="btn btn-primary">See Details</a>
             </div>
         </div>
     </section>
@@ -327,6 +375,7 @@
         <p>Copyright © 2025. News Sync</p>
         <p>Cookies, GDPR</p>
     </footer>
+    <button id="scrollToTopBtn">↑</button>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
