first phase done

--- a/news_detail.html
+++ b/news_detail.html
@@ -131,6 +131,13 @@
         </div>
 
         <div class="news-img"><img src="img/wallpaperflare.com_wallpaper (2).jpg" alt=""></div>
+        <div id="likes"><button class="dislike-like"><i class="fa-solid fa-thumbs-up fa-lg"
+                    style="color: #FFD43B;"></i></button>
+            <button class="dislike-like"><i class="fa-solid fa-thumbs-down fa-lg" style="color: #FFD43B;"></i></button>
+        </div>
+        <div id="related">
+
+        </div>
     </section>
 
     <footer>
